Still trying to fix horizontal scrollbar on website

--- a/portfolio/studentGradeTable/server/public/styles.css
+++ b/portfolio/studentGradeTable/server/public/styles.css
@@ -1,5 +1,6 @@
 body {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 1024px) and (orientation: landscape) {
